stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0030_const_tuple_string_char.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0030_const_tuple_string_char.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(x, y)
stderr:
<empty>
