stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0042_identity_int_one.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0042_identity_int_one.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
stderr:
<empty>
