stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0045_identity_list_ints.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0045_identity_list_ints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
[0, 1, 2]
stderr:
<empty>
