stage0/tests/snapshots/program__tests_fixtures_programs_imported_typ_0066_nested_let_tuple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/typ/0066_nested_let_tuple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(0, false)
stderr:
<empty>
